Fix summary color for dark mode

--- a/templates/default/app.less
+++ b/templates/default/app.less
@@ -16,7 +16,7 @@
   .fixedHeight { line-height: 12px; }
   .tracker_indexPrio:first-letter { font-weight: bold; }
   .tracker_image16 img { height: 16px; }
-  [id*="tr_summary"] a { color: var(--label-color);}
+  [id*="tr_summary"] a { color: inherit;}
 }
 /* Header classes*/
 #tracker-index_tracker-index-left_multiqueue {
